# RED4ext-macos

./: .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  COMMIT_INSTRUCTIONS.md  PULL_REQUEST.md  README.md  RELEASE.md  build_script.sh  red4ext_launcher.sh
.github/: RELEASE_TEMPLATE.md
cmake/: ConfigureAndIncludeFishhook.cmake  ConfigureAndIncludeRED4extSdk.cmake  ConfigureAndIncludeSimdjson.cmake  ConfigureAndIncludeSpdlog.cmake
docs/: FRIDA_INTEGRATION.md  MACOS_CODE_SIGNING.md  MACOS_PORT.md  README.md
scripts/: README.md  README_SYMBOL_MAPPING.md  REVERSE_ENGINEERING_GUIDE.md  convert_addresses_hpp_to_json.py  create_release.sh  cyberpunk2077_addresses.json  download_windows_addresses.py  generate_addresses.py  generate_symbol_mapping.py  macos_install.sh  (+7 more)
src/dll/: Addresses.cpp  Addresses.hpp  App.cpp  CMakeLists.txt  Config.cpp  DetourTransaction.cpp  DetourTransaction.hpp  DevConsole.cpp  GameStateHook.hpp  Hook.hpp  Image.cpp  Log.hpp  Main.cpp  MemoryProtection.cpp  Paths.cpp  Platform.hpp  PluginBase.cpp  ScriptValidationError.cpp  Utils.cpp  Utils.hpp  stdafx.hpp
src/dll/Hooks/: AssertionFailed.cpp  CGameApplication.cpp  CollectSaveableSystems.cpp  ExecuteProcess.cpp  InitScripts.cpp  LoadScripts.cpp  Main_Hooks.cpp  ValidateScripts.cpp  gsmState_SessionActive.cpp
src/dll/Platform/: Hooking.cpp  Hooking.hpp  MacOS.cpp  Windows.cpp
src/dll/Systems/: HookingSystem.cpp  HookingSystem.hpp  LoggerSystem.cpp  LoggerSystem.hpp  PluginSystem.cpp  ScriptCompilationSystem.cpp  StateSystem.cpp
src/dll/v0/: Funcs.cpp  Logger.cpp
(+20 files in other folders)
